--- a/_posts/2018-11-28-go-bingfa.md
+++ b/_posts/2018-11-28-go-bingfa.md
@@ -180,5 +180,102 @@ func handle(queue chan *PipeData) {
 
 #### 6.单向channel
 
+​	单向channel只能用于发送或者接收数据。channel本身同时支持读写。所谓的单向channel概念，其实只是对channel的一种使用限制。
 
+​	在将一个channel变量传递到一个函数时，可以通过将其指定为单向channel变量，从而限制该函数中对此channel的操作，比如只能往这个channel写，或者只能从这个channel读。
 
+​	单向channel变量的声明如下：
+
+```go
+var ch1 chan int //ch1 is a normal channel 
+var ch2 chan<- float64 //ch2 is a single direct channel,used for writing float64 data
+var ch3 <-chan int //ch3 is a single direct channel,used for reading int data
+```
+
+​	channel是一个原生类型，因此不仅支持被传递，还支持类型转换。可以在单向channel和双向channel之间进行转换。
+
+```go
+ch4:=make(chan int)
+ch5:=<-chan int(ch4) //ch5就是一个单向的读取channel
+ch6:=chan<- int(ch4) //ch6就是一个单向写入的channel
+```
+
+​	从设计的角度考虑，所有的代码应该都遵循“最小权限原则”，从而避免没必要的使用泛滥问题，进而导致程序失控。
+
+```go
+func Parse(ch<-chan int){
+    for value:=range ch{
+        fmt.Println("Parsing value",value)
+    }
+}
+```
+
+​	避免在ch中出现非期望的数据，更好的实现最小权限原则。
+
+#### 7. 关闭channel
+
+​	直接使用Go语言内置的`close()`函数即可：
+
+```go
+close(ch)
+```
+
+​	 那么问题来了，怎么才能判断一个channel是否已经被关闭？
+
+```go
+x,ok:=<-ch
+```
+
+### 4. 多核并行化
+
+​	当前版本的Go编译器还不能很智能地去发现和利用多核的优势。虽然我们确实创建了多个goroutine，并且从运行状态看这些goroutine也都在并行运行，但实际上所有这些goroutine都运行在同一个CPU核心上，在一个goroutine得到时间片执行的时候，其他goroutine都会处于等待状态。虽然goroutine简化了我们写并行代码的过程，但实际上整体运行效率并不真正高于单线程程序。
+
+​	
+
+### 5.出让时间片
+
+​	我们可以在每个`goroutine`中控制何时主动出让时间 给其他goroutine，这可以使用`runtime`包中的Gosched()函数实现。	
+
+​	如果想更加精准、精细的控制goroutine的行为，就必须比较深入地了解Go语言开发包中的runtime包所提供的具体功能。
+
+### 6. 同步
+
+​	主要为了解决多个goroutine之间的共享数据问题，这个主要是通过通信来共享数据的。设计者在提供channel的同时，也提供了资源锁方案。
+
+#### 6.1 同步锁
+
+​	Go语言包中的sync包提供了两种锁类型：sync.Mutex和sync.RWMutex。Mutex是最为简单的一种锁类型，也比较暴力，当一个goroutine获得了Mutex后，其他goroutine就只能等着这个goroutine释放掉这个Mutex。RWMutex相对于比较友好，类似于Java里面的读写锁，在读锁占用的情况下，会组织写，但是不会阻止读，也就是多个goroutine可以同时获取读锁（调用Rlock()方法；而写锁Lock（）会阻止其他的goroutine进来，不能进行读写）；
+
+​	这两种类型锁，任何一个Lock（）和RLock（）都需要保证有对应的Unlock（）和RUnlock（）调用与之对应，否则可能导致等待这个锁的所有goroutine处于饥饿状态，甚至死锁。
+
+```go
+var l sync.Mutex
+func foo(){
+    l.Lock()
+    defer l.Unlock()
+    //...
+}
+```
+
+#### 6.2 全局唯一性操作
+
+​	对于从全局的角度只需要执行一次的代码，比如全局初始化操作，Go语言提供了一个Once 类型来保证全局的唯一性操作，具体代码如下:
+
+```go
+var a string
+var once sync.Once
+func setup(){
+    a="hello world"
+}
+func doprint(){
+    once.Do(setup)
+    print(a)
+}
+func twoprint(){
+    go doprint()
+    go doprint()
+}
+```
+
+​	once的Do()方法可以保证在全局范围内只调用指定的函数一次(这里 
+setup()函数)，而且所有其他goroutine在调用到此语句时，将会先被阻塞，直到全局唯一的once.Do()调用结束后才继续。
