add goroutine theroy

--- a/_posts/2018-11-28-go-bingfa.md
+++ b/_posts/2018-11-28-go-bingfa.md
@@ -5,13 +5,7 @@ tags: [go]
 layout: post
 ---
 
-
-
-Go语言在语言级别支持轻量级线程，`goroutine`。Go语言标准库提供的所有系统调用操作，都会让出CPU给其他的`goroutine`。轻量级的线程切换不依赖于系统的线程和进程，也不依赖于CPU
-
-的核心数量。
-
-
+​	Go语言在语言级别支持轻量级线程，`goroutine`。Go语言标准库提供的所有系统调用操作，都会让出CPU给其他的`goroutine`。轻量级的线程切换不依赖于系统的线程和进程，也不依赖于CPU的核心数量。
 
 ### 1. goroutine
 
@@ -22,7 +16,6 @@ func Add(x,y int){
     z:=x+y
     fmt.Println(z)
 }
-
 go Add(1,1)
 ```
 
@@ -64,8 +57,6 @@ func main(){
 }
 
 ```
-
-
 
 #### 1.基本语法
 
@@ -148,13 +139,13 @@ case <-timeout:
 
 #### 5.channel的传递
 
-在Go语言中channel本身也是一个原生类型，与map之类的类型地位一样，因 此channel本身在定义后也可以通过channel来传递。 
+​	在Go语言中channel本身也是一个原生类型，与map之类的类型地位一样，因 此channel本身在定义后也可以通过channel来传递。 
 
-我们可以使用这个特性来实现*nix上非常常见的管道(pipe)特性。管道也是使用非常   的一种设计模式，比如在处理数据时，我们可以采用管道设计，这样可以比 容易以 件的方式 增加数据的处理流程。 
+​	我们可以使用这个特性来实现*nix上非常常见的管道(pipe)特性。管道也是使用非常   的一种设计模式，比如在处理数据时，我们可以采用管道设计，这样可以比 容易以 件的方式 增加数据的处理流程。 
 
-下面我们利用channel可被传递的特性来实现我们的管道。为了简化表达，我们 设在管道中 传递的数据只是一个整型数，在实际的应用场景中这通常会是一个数据 。 
+​	下面我们利用channel可被传递的特性来实现我们的管道。为了简化表达，我们假设在管道中传递的数据只是一个整型数，在实际的应用场景中这通常会是一个数据 。 
 
-  首先限定基本的数据结构:
+ 	首先限定基本的数据结构:
 
 ```go
 type PipeData struct { 
