--- a/_posts/2019-01-01-plan.md
+++ b/_posts/2019-01-01-plan.md
@@ -36,7 +36,7 @@ tag: [2019 plan]
 - 深入学习docker底层实现原理（狠狠地撸一把linux内核、操作系统）
 - 深入学习研究kubernetes，研究实现原理、可以开发自定义插件
 - 学习研究一下serviceMesh技术，紧跟时代潮流。
-- 年度目标，系统化、平台化容器云。全面、完备的体系构建，保证能够线上使用
+- 年度目标，系统化、平台化容器云。全面完备的体系构建，保证能够线上使用
 
 
 
