--- a/_posts/2019-04-26-k8s集群监控设计.md
+++ b/_posts/2019-04-26-k8s集群监控设计.md
@@ -35,7 +35,7 @@ tags: [k8s,metric]
 
 对于容器云Paas平台的运维事件响应和处理过程，这里会给出具体的运维管理全景框架。
 
-![](/Users/nali/songyintao/SongYintao.github.io/img/运维框架.png)
+![](../img/运维框架.png)
 
 ​		对于容器云Paas监控平台产生的事件和告警，需要提供完备的事件响应流程、运维处理流程、告警处理机制和故障处理流程。
 
@@ -168,7 +168,7 @@ etcd集群本身支持prometheus的metrics监测。
 
 #### 1. Prometheus架构
 
-![](/Users/nali/songyintao/SongYintao.github.io/img/promithus-1.png)
+![](../img/promithus-1.png)
 
 
 
