add distribute consensus

--- a/_posts/2019-05-24-os.md
+++ b/_posts/2019-05-24-os.md
@@ -815,9 +815,86 @@ wait、signal
 
 ## 文件系统
 
+所有的计算机应用程序都需要存储和信息检索。进程运行时，可以在他自己的地址空间存储一定的信息，但是存储容量受虚拟地址空间的大小限制。对于某些应用程序，他自己的地址空间已经足够用了；但是对于其他一些应用程序，这些存储比较小。
 
+在进程的地址空间上保存信息的第二个问题：进程终止时，他保存的信息也随之丢失。对于数据库而言，有关的信息必须持久化。在使用信息的进程终止时，这些信息不可以消失。
+
+第三个问题：经常需要多个进程同时存取同一信息。如果只在一个进程的地址空间保存，那么只有该进程才可以对他进行读取。
+
+因此，长期存储信息有三个条件：
+
+- 能够存储大量的信息；
+- 能够保证使用信息的进程终止时，信息仍旧存在。
+- 必须能够使多个进程并发存取有关信息。
+
+磁盘具有长期存储的性质，当前我们可以先吧磁盘当作一个固定块大小的线性序列，并且支持以下两种操作：
+
+- 读块k；
+- 写块k。
+
+事实上磁盘支持更多的操作，但是只要有了这两种。原则上就可以解决长期存储的问题。
+
+当前会存在这些问题：
+
+- 如何找到信息？
+- 如何防止一个用户读取另一个用户的数据？
+- 如何知道哪些块是空的？
+
+和之前一样：
+
+- 提取处理器的概念来建立进程的抽象；
+- 提取物理存储器的概念来建立进程（虚拟）地址空间的抽象；
+
+这样我们可以新建一个抽象——文件。来解决这个问题。**进程（与线程）**、**地址空间**和**文件**都是操作系统中最重要的概念。深入理解了这三个概念，我们就迈上了成为操作系统专家的道路。
+
+文件是进程创建的信息逻辑单元。一个磁盘一般包含成百上千的文件，每个文件都是独立于其他文件的。文件不仅仅被用来对磁盘建模，来替代对RAM的建模，事实上，如果把文件看成一种地址空间，那么基本上算是理解了文件的本质。
+
+操作系统中处理文件的部分称为文件系统。
+
+从用户的角度看，文件系统中最重要的是它在用户眼中的表现形式，也就是文件是由什么组成的。怎么给文件命名，怎么保护文件，以及可以对文件进行哪些操作等。至于具体的细节，是用链表还是位图来记录空闲存储区一级在一个逻辑盘块中有多少个扇区，用户都不会关心，对文件系统的设计者来讲，相当重要。
+
+前两节讲述用户关心的部分——文件和目录，后面讲解具体的实现原理。
 
 ### 1. 文件
+
+#### 1. 文件命名
+
+文件是一种抽象机制，它提供了一种在磁盘上面保留信息而且方便以后读取的方法。这种方法可以使用户不用了解存储信息的方法、位置和实际磁盘工作方式等细节。
+
+任何一种抽象机制的最重要的特性就是对管理对象的命名方式。因此，我们从文件的命名开始考察文件系统。
+
+文件的具体命名规则在各个操作系统中不一致。许多操作系统支持文件名用圆点隔开分为两个部分。后面的称为文件扩展名。
+
+#### 2. 文件结构
+
+三种结构：（加图160页）
+
+- 字节序列
+- 记录序列
+- 树
+
+操作系统实际上并不关心文件的内容是什么，操作系统看到的都是字节，其任何含义只在用户程序中解释。
+
+把文件看成字节序列为操作系统提供了更大的灵活性。用户程序可以想文件中加入任何内容，并以任何方便的形式命名。操作系统不会提供任何帮助，也不会构成障碍。
+
+**记录序列**在文件结构上做了第一步改进。在这个模型中，文件具有固定长度记录的序列，每个记录都有其内部结构。把文件作为记录序列的中心思想是：读操作返回一个记录，而写操作重写活着追加一个记录。
+
+第三种文件结构：树。文件在这种结构中由一棵记录树组成，每个记录并不具有同样的长度，而记录的位置上有一个"键"字段。这棵树就是按照"键"字段进行排序，从而可以对特定"键"进行快速的查找。
+
+#### 3. 文件类型
+
+很多操作系统支持多种文件类型：
+
+- 普通文件（regular file）：上面的三种结构文件
+- 字符特殊文件（character special file）：和输入输出有关，用于串行IO类设备，如终端、打印机、网络等。
+- 块特殊文件（block special file）：用于磁盘类设备。
+
+##### 普通文件
+
+一般分为：
+
+- ASCII文件
+- 二进制文件
 
 
 
