--- a/_posts/2019-05-24-os.md
+++ b/_posts/2019-05-24-os.md
@@ -5,7 +5,9 @@ layout: post
 tags: [os,system]
 ---
 
-## 概述
+# 现代操作系统
+
+## 一、概述
 
 ### 0.计算机硬件介绍
 
@@ -180,7 +182,7 @@ while(TRUE){
 
 
 
-## 进程与线程
+## 二、进程与线程
 
 ### 1.进程
 
@@ -725,7 +727,7 @@ wait、signal
 
 
 
-## 存储管理
+## 三、存储管理
 
 内存（RAM）是计算机中需要认真管理的资源。
 
@@ -813,7 +815,7 @@ wait、signal
 
 
 
-## 文件系统
+## 四、文件系统
 
 所有的计算机应用程序都需要存储和信息检索。进程运行时，可以在他自己的地址空间存储一定的信息，但是存储容量受虚拟地址空间的大小限制。对于某些应用程序，他自己的地址空间已经足够用了；但是对于其他一些应用程序，这些存储比较小。
 
@@ -869,9 +871,11 @@ wait、signal
 
 三种结构：（加图160页）
 
-- 字节序列
-- 记录序列
-- 树
+- **字节序列**
+- **记录序列**
+- **树**
+
+![](../img/os-file-struct.png)
 
 操作系统实际上并不关心文件的内容是什么，操作系统看到的都是字节，其任何含义只在用户程序中解释。
 
@@ -885,18 +889,112 @@ wait、signal
 
 很多操作系统支持多种文件类型：
 
-- 普通文件（regular file）：上面的三种结构文件
-- 字符特殊文件（character special file）：和输入输出有关，用于串行IO类设备，如终端、打印机、网络等。
-- 块特殊文件（block special file）：用于磁盘类设备。
+- **普通文件**（regular file）：上面的三种结构文件
+- **字符特殊文件**（character special file）：和输入输出有关，用于串行IO类设备，如终端、打印机、网络等。
+- **块特殊文件**（block special file）：用于磁盘类设备。
 
-##### 普通文件
+##### 1.普通文件
 
 一般分为：
 
 - ASCII文件
+
+  > 文件是由多行正文组成。在某些系统中，每行用回车符结束，其他系统则用换行符结束。有些系统号同时采用回车符和换行符。文件中各行的长度不一定相同。
+  >
+  > 优势：
+  >
+  > - 可以显示和打印，还可以用文本编辑器进行编辑；
+  > - 如果很多程序都以ASCII文件作为输入和输出，就很容易吧一个程序的输出当成另一个程序的输入，比如，shell的管道
+
 - 二进制文件
 
+  > 打印出来的二进制文件无法理解，充满混乱字符。通常，二进制文件有一定的内部结构，使用该文件的程序才知道这个结构。
 
+
+![](../img/os-file-bin.png)
+
+
+
+上图a是一个简单的可执行二进制文件，来自某个版本的UNIX。虽然这个文件只是一个字节序列，但是只有文件的格式正确时，操作系统彩绘执行这个文件。该文件有五个部分组成：
+
+- **文件头**
+  - 魔数：表明这个是一个可执行的文件。
+  - 文件中各段的长度
+  - 执行的起始地址
+  - 标志位
+- **正文**
+- **数据**
+- **重定位位**
+- **符号表**
+
+这些被装入内存，并使用重定位位重新定位。符号表则用于测试。
+
+上图b，即UNIX的存档文件。它由已编译但没有连接的库过程（模块）集合而成。每个文件以模块头开始，其中记录了名称、创建日期、所有者、保护码和文件大小。该模块头与可执行文件一样，也都是二进制数字。
+
+所有的操作系统必须能够识别它们自己的可执行文件和文件类型，其中有些操作系统还可以识别更多的信息。
+
+#### 4.文件存取
+
+早期操作系统只有一种文件存取方式：顺序存取。进程在这些系统中可从头吮吸读取文件的全部字节或者记录，但是不能跳过某一些内容，也不能不按顺序读取。
+
+当用磁盘来存储文件时，我们可以不按顺序地读取文件中的字节或记录，或者按照关键字而不是位置来存取记录。这种能够以任何次序读取其中字节或记录的文件称作**随机存取文件**。
+
+随机存取文件对很多应用程序必不可少，比如数据库系统。
+
+有两种方式可以指示从何处开始读取文件。一种是每次read操作都给出读取文件的位置。另外一种是用一个特殊的seek操作设置当前位置，在seek操作之后，从这个位置顺序的开始读写文件。
+
+
+
+#### 5. 文件属性
+
+文件都有文件名和数据。另外，所有的操作系统还会保留其他与文件相关的信息，比如文件创建的时间、文件的大小等。
+
+除此之外，还有一些其他的附加信息称为文件**属性**或者**元数据**。
+
+| 属性              | 含义                                                       |
+| ----------------- | ---------------------------------------------------------- |
+| 保护              | 谁可以存取文件，以什么方式存储文件                         |
+| 口令              | 存储文件需要的口令                                         |
+| 创建者            | 创建文件人的id                                             |
+| 只读标志          | 0:读写，1:只读                                             |
+| 隐藏标志          | 0:正常，1:不在列表中展示                                   |
+| 系统标志          | 0:普通文件，1：系统文件                                    |
+| 存档标志          | 0:已经备份，1:需要备份                                     |
+| ASCII／二进制标志 | 0:ASCII，1:二进制文件                                      |
+| 随机存取标志      | 0:顺序存取，1:随机存取                                     |
+| 临时标志          | 0:正常，1:进程退出时删除该文件                             |
+| 加锁标志          | 0:为加锁，非零加锁                                         |
+| 记录长度          | 一个记录中的字节数                                         |
+| 键的位置          | 每个记录中键的偏移量                                       |
+| 键的长度          | 键字段的字节数                                             |
+| 创建时间          |                                                            |
+| 最后一次存取时间  |                                                            |
+| 最后一次修改时间  |                                                            |
+| 当前大小          |                                                            |
+| 最大长度          | 文件可能增长到的字节数，方便老的操作系统留出足够的存储空间 |
+|                   |                                                            |
+
+
+
+#### 6. 文件操作
+
+使用文件的目的：存储信息并方便以后的检索，不同系统提供了不同的操作。常用的系统调用：
+
+1. create。创建不包含任何数据的文件。该调用的目的是表示文件即将建立，并设置一些属性。
+2. delete。当不再需要某个文件时，必须删除该文件已释放磁盘空间。
+3. open。使用文件之前，必须先打开文件。调用的目的：把文件属性和磁盘地址表装入内存，便于后续调用的快速读取。
+4. close。存取结束后，不再需要文件属性和磁盘地址，这时应该关闭文件以释放内部表空间。很多系统限制进程打开文件的个数，以鼓励用户关闭不再使用的文件。磁盘以块为单位写入，关闭文件时，写入该文件 的最后一块，即使这个块还没有写满。
+5. read。在文件系统中读取数据。一般地，读出数据来自文件的当前位置。调用者必须指明需要读取多少数据，并且提供存放这些数据的缓冲区。
+6. write。想文件写数据，写操作一般也是从文件当前位置开始。如果文件当前位置是文件末尾，文件长度增加。如果当前位置在文件中间，则现有这些数据被覆盖，并且永远丢失。
+7. append。次调用是write的限制形式。他只能在文件的末尾添加数据。若系统只提供最小系统调用集合，则通常没有append。很多系统对同一操作提供了很多的视线方法，这些系统中有时数据有append操作。
+8. seek。对于随机存储文件，要指定从何处开始取数据，通常的方法是用seek系统调用把当前位置的指针指向文件中的特定位置。seek调用之后，就可以从该位置开始读写数据。
+9. get attributes。
+10. set attributes。
+11. rename。
+
+
+
+#### 7. 使用文件调用系统示例
 
 
 
@@ -904,13 +1002,172 @@ wait、signal
 
 ### 2.目录
 
+文件系统通常提供目录和文件夹用于记录文件，在很多系统中目录也是文件。
 
+主要学习目录的组成、目录的特性和可以对目录进行的操作。
 
+#### 1. 一级目录系统
 
+最简单的形式是在一个目录中包含所有的文件。这个称为根目录，但是由于只有一个目录，所以其名称并不重要。早期的计算机系统中，这个系统很普遍。部分原因是只有一个用户。只要是为了软件设计的简单。
+
+#### 2. 层次目录系统
+
+对于简单的特殊应用来说单层目录系统比较合适，但是现在的用户有着成千上万的文件，如果都在一个目录下面显然不合适。
+
+因此，需要有层次结构（即，一个目录树）。通过这种方式，可以用很多目录把文件以自然的方式进行分组。
+
+#### 3. 路径名
+
+两种方式：
+
+- 绝对路径
+- 相对路径
+
+![](../img/os-dir-0.png)
+
+#### 4. 目录操作
+
+系统调用：
+
+1. create。创建目录。
+2. delete。删除目录。
+3. opendir。
+4. closedir。
+5. readdir。
+6. rename。
+7. link。连接技术允许在多个目录中出现一个文件。这个系统调用指定一个存在的文件和一个路径名，并建立从该文件到路径所指名字的连接。该链接增加了该文件的i节点计数器的计数（记录含有该文件的目录项目数），有时称为硬连接。
+8. unlink。
 
 ### 3. 文件系统的实现
 
+现在从用户的角度切换到是实现者的角度考察文件系统。实现者感兴趣的是文件和目录是怎样存储的，磁盘空间是怎样管理的以及怎样使系统有效而可靠地工作。
 
+#### 1. 文件系统布局
+
+​		文件系统存放在磁盘上。**多数磁盘划分为一个或者多个分区，每个分区中有一个独立的文件系统。磁盘的0号扇区称为主引导记录（Master Boot Record，MBR），用来引导计算机。在MBR的结尾时分区表。该表给出了每个分区的起始和结束地址。表中的一个分区被标记为活动分区。在计算机被引导时，BIOS读入并执行MBR。MBR做的第一件事是确定活动分区，读入它的第一个块，称为引导块（boot block），并执行之。引导块中的程序将装载该分区中的操作系统。**为统一起见，每一个分区都从一个启动块开始，即使它不含有一个可启动的操作系统。不过，将来可能会成为一个操作系统。
+
+​		除了引导块之外，磁盘分区布局是随着文件系统的不同而变化的。文件系统通常还包含以下几个部分。
+
+​		第一个是**超级块（superblock）**，超级块包含文件系统所有关键参数，在计算机启动时，或者在该文件系统首次使用时，把超级块读入内存。超级块中的典型信息包括：**确定文件系统类型的魔数**、**文件系统中数据块的数量**以及**其它重要的管理信息**。
+
+​		其次，文件系统中的**空闲块的信息**，例如，**可以用位图或指针列表的形式给出**。
+
+​		后面，也许会**有一组i节点**，这是一个数据结构数组，每个文件一个，i节点说明了文件的方方面面。
+
+​		接着，可能是**根目录**，**存放文件系统目录树的根部**。
+
+​		最后，**磁盘的其他部分存放了其他所有目录和文件**。
+
+![](../img/os-file-arch.png)
+
+#### 2. 文件的实现
+
+文件存储的实现，关键是**记录各个文件分别用到了哪些磁盘块**。不同操作系统采用不同的方式。
+
+##### 1. 连续分配
+
+最简单的分配方案是把每个文件作为一连串连续数据块存储到磁盘上。
+
+请注意，每一个文件都是从一个新的块开始，如果文件实际上只有3.5个块，那么最后一个块会浪费一些空间。
+
+连续磁盘空间分配方案优势：
+
+- 实现简单。记录每个文件用到的磁盘块简化为只需要记住两个数字：磁盘地址和文件块数；
+- 读操作性能较好。只需要一次寻找。之后不再需要寻道和旋转延迟。
+
+缺点：
+
+- 随着时间的推移，部分文件被删除。磁盘会变得十分零碎。开始时，碎片不是问题。但是磁盘最终会被充满，所以要么压缩磁盘，要么重新使用磁盘的空洞空间。前者的代价太大而不可行；后者需要维护一个空洞列表，这个是可行的。但是，当创建一个新的文件时，为了挑选合适大小的空洞存入文件，就必须要知道这个文件的最终大小。
+
+##### 2. 链表分配
+
+每个文件构造磁盘块链表。每个块的第一个字作为指向下一块的指针，块的其他部分存放数据。
+
+![](../img/os-file-link-list.png)
+
+与连续分配不同，这个方案可以充分的利用每个磁盘块。这样，只要在目录项中存放第一块的磁盘地址，文件的其他块就可以从这个首地址查找到。
+
+另一方面，虽然在链表分配方案中，顺序读取非常方便，但是随机存取却相当缓慢。要获得块n，操作系统每次都必须从头开始，并且要先读前面的n-1块。显然，这样的读操作太慢了。
+
+而且，指针占去了一些字节，每个磁盘块存储的字节数不再是2的整数次幂。虽然这个问题不严重，但是怪异的大小会降低系统的运行效率。因为很多程序都是以长度为2的整数次幂来读写磁盘块的。由于每个块的前几个字节被指向下一个块的指针占据，所以要读出完整的一个块，就需要从两个磁盘块中获得和拼接信息，引发了额外的开销。
+
+##### 3. 在内存中采用表的链表分配
+
+如果把每个磁盘块的指针字放到内存的一个表中，就可以解决上述链表的两个不足。
+
+这种方法的缺点：
+
+必须把整个表都存放在内存中。对于200G的磁盘和1KB的块，这张表需要有2亿项，每一项对应于这2亿个磁盘块中的一个块。每项至少3个字节，很显然FAT（文件分配表）方案对于大的磁盘很不合适。
+
+##### 4. i节点
+
+给每一个文件赋予一个称为i节点的数据结构，其中列出了文件属性和文件块的磁盘地址。给定i节点，就能够找到文件的所有块。相对于内存中采用表的方式，这种机制具有很大的优势，即只有在对应文件打开时，其i节点才在内存中。
+
+i节点的问题，如果每个i节点只能存储固定数量的磁盘地址，那么当一个文件所含的磁盘块的数目超过i节点所能容纳的树木怎么办？一个解决方案，最后一个磁盘地址不指向数据块，而是指向一个包含磁盘块地址的块的地址。
+
+![](../img/os-file-inode.png)
+
+更高级的解决方案：可以有两个或者更多个包含磁盘地址的块，或者**指向其他存放地址的磁盘块的磁盘块**。
+
+#### 3. 目录的实现
+
+在读文件之前，必须先打开文件。打开文件时，操作系统利用用户给出的路径名找到相应的目录项。目录项中提供了查找磁盘块所需要的信息。因系统而异，这些信息可能是整个文件的磁盘地址（连续分配方案）、第一个块的编号或者i节点。总之，目录系统的主要功能：把AscII文件名映射成定位文件数据所需的信息。
+
+与此相关的是在哪里存放文件属性。每个文件系统维护诸如文件所有者以及创建时间等文件属性，他们必须存在于某个地方。
+
+一种简单的方法：把文件属性直接放在目录项中。目录项中有一个固定大小的目录项表，每个文件对应一项，其中包括文件名、一个文件属性结构以及用以说明磁盘块位置的一个或多个磁盘地址。
+
+正对采用i节点的系统，把文件属性存放在i节点中而不是目录项中。在这种情形下，目录项更短：只有文件名和i节点号。
+
+在需要查询文件名时，如果知识现行地从头到尾对目录进行搜索。对于非常长的目录，线性查询太慢了。为了加速查询速度，采用散列表的方式，将文件名映射到n个表项里面。
+
+#### 4. 共享文件
+
+文件系统本身是一个有向无环图，而不是一个树。
+
+第一种方法：磁盘块不列入目录，而是列入一个与文件本身关联的小型数据结构中。目录只想这个小型数据结构。UNIX采用了这个方案（小型数据结构就是inode）；
+
+第二种方法：符号连接。通过让系统建立一个类型为LINK的新文件，并把该文件放在B的目录下，使得B与C的文件存在一个连接。新的文件中只包含了它所连接的文件的路径名。当B读该连接文件时，操作系统查看要读的文件为LINK类型，则找到该文件所连接的文件名，并且去读取那个文件。
+
+
+
+#### 5. 日志结构文件系统
+
+促使设计LFS的主要原因，CPU的运行速度越来越快，RAM内存容量越来越大，同时磁盘高速缓存也迅速的增加。今儿不需要磁盘访问操作，就有可能满足直接来自**文件系统高速缓存**的很大一部分读请求。所以可以看出，未来多数的磁盘访问时写操作，这样，在一些文件系统中使用的提前读机制，并不能获得更好的性能。
+
+更糟糕的是，在大多数文件系统中，写操作是零碎的。一个50us的磁盘写操作通常需要10ms的寻道时间和4ms的旋转延迟时间，可见零碎的磁盘写操作是极其没有效率的。
+
+如果在写操作完成之前发生司机，就可能在文件系统中造成严重的不一致性。因此，i 节点的写操作一般是立即完成的。
+
+因此，LFS的设计者决定重兴市县一中UNIX文件系统，该系统即使对于一个大部分由零碎的随机写操作组成的任务，同样能够充分利用磁盘的带宽。其基本思想是将整个磁盘结构化为一个日志。每隔一段时间，或者特殊需要时，被缓冲在内存中的所有关于味觉的写操作都被放到一个单独的段中，作为在日志末尾的一个邻接段写入磁盘。一个单独的段可能会包含i节点、目录块、数据块或者都有。每一个段的开始都是该段的摘要，说明该段中都包含了哪些内容。
+
+在LFS的设计中，也采用了i节点，且具有UNIX中一样的结构，但是i及诶单分散在整个日志中，而不是存在磁盘的某个固定的位置。当一个i 节点被定为之后，定位一个块就用通畅的方式。为了能够找到i节点，比需要维护一个由i 节点标号索引组成的i节点图。在这个途中的表项i指向磁盘中的第i个i 节点。这个图保存在磁盘上，但是也保存在高速缓存中。
+
+总之，所有的写操作最初是被缓冲在内存中，然后周期性的把所有以缓冲的写作为一个单独的段，在日志的末尾出写入磁盘。要打开一个文件，则首先需要从i 节点图中找到文件的i 节点，一旦i 节点定为之后就可以找到相应的块的地址。所有的块都存放在段中，在日志的某个位置。
+
+如果磁盘空间无限大，那么前面的套路已经够了。但是，实际的磁盘空间有限，这样最终导致日志将会占用整个磁盘，到那个时候将不能够写任何新的段。幸运的是，许多已有的段包含了很多不在需要的块，比如，一个文件被覆盖之后，那么她的i 节点将会只相信的块，但是旧的块仍然占据着空间。
+
+LFS为此映入了一个清理线程。周期性地扫描日志进行磁盘压缩。该县承受限度去日志中的第一段的摘要，检查有哪些i节点和文件。然后该县城查看当前i 节点图，判断该i 节点是否有效一集文件块是否在用。如果没有，则该信息被丢弃。如果在使用，那么i 节点个块进入内存等待写回到下一个段中。接着，原来的段被标记为空闲，一边日志可以使用它来存放新的数据。因此，整个磁盘就是一个大型的环形缓冲区，写进程将新的段写到前面，而清理的线程则讲究的段从后面移走。
+
+#### 6. 日志文件系统
+
+LFS性能很好，但是呢和现有的文件系统不兼容，因此，没有得到推广。但是，内在的思想，即面对出错的鲁棒性，却可以被其他文件系统借鉴。
+
+基本思想：保存一个用于记录系统下一步要做什么的日志。这样当系统在完成他们即将完成的任务崩溃时，重启之后，可以通过日志，获取崩溃之前计划完成的任务，并完成他们。这样的系统称为：日志文件系统。
+
+NTFS、Linux的ext3和ReiserFS都使用日志。
+
+#### 7. 虚拟文件系统
+
+同一个操作系统下，也会使用不同的文件系统。
+
+![](../img/os-file-vfs.png)
+
+su噢呦和文件相关的系统调用在最初的处理上都指向虚拟文件系统。这些来自用户进程的调用，都是标准的POSIX系统调用，比如open、read、write和seek操作等。因此，虚拟文件系统对用户进程又一个更高层的接口，就是著名的POSIX接口。
+
+VFS也有一个对于更低层的时间文件系统的"更低层"接口，就是上图中标为VFS接口的部分。这个接口包含了许多功能调用，这样VFS可以使每一个文件系统完成任务。因此，当创造一个新的文件系统和VFS一起工作时，新的文件系统的设计者就必须确定它提供VFS所需要的功能调用。关于这个功能的例子就是从磁盘中读某个特定的块，把它放在文件系统的高速缓存中，并返回他的指针。因此，VFS有两个不同的借口：上层给用户进程的接口和下层给实际文件系统的接口。
+
+VFS设计只要实际的文件系统提供VFS需要的功能，VFS就不必知道数据具体存储在什么地方或者底层的文件系统怎么样。
 
 
 
@@ -924,7 +1181,7 @@ wait、signal
 
 
 
-## 输入、输出
+## 五、输入、输出
 
 
 
@@ -970,7 +1227,7 @@ wait、signal
 
 
 
-## 死锁
+## 六、死锁
 
 ### 1. 资源
 
@@ -1002,7 +1259,7 @@ wait、signal
 
 
 
-##  多媒体操作系统
+##  七、多媒体操作系统
 
 ### 1. 多媒体简介
 
@@ -1042,7 +1299,7 @@ wait、signal
 
 
 
-## 多处理机系统
+## 八、多处理机系统
 
 
 
@@ -1064,7 +1321,7 @@ wait、signal
 
 
 
-## 安全
+## 九、安全
 
 ### 1. 环境安全
 
@@ -1104,7 +1361,7 @@ wait、signal
 
 
 
-## 实例研究： Linux
+## 十、实例研究： Linux
 
 ### 1.Linux概述
 
