--- a/_posts/2019-11-20-network.md
+++ b/_posts/2019-11-20-network.md
@@ -1,8 +1,8 @@
 ---
 title: Linux 网络——iptables/netfilter
-subtitle: Linux 网络知识总结
+subtitle: Linux 网络知识总结——iptables/netfilter等基础知识
 layout: post
-tags: [linux,networking]
+tags: [linux,networking,iptables,netfilter]
 ---
 
 
