--- a/_posts/2019-11-02-gRpc.md
+++ b/_posts/2019-11-02-gRpc.md
@@ -99,7 +99,18 @@ static class GreeterImpl extends GreeterGrpc.GreeterImplBase {
 }
 ```
 
+### 1.2 服务端创建流程
 
+gRPC服务端创建采用Build模式，对底层服务绑定、transportServer和NettyServer的创建和实例化做了封装和屏蔽，让服务调用者不用关心RPC调用细节，整体上分为三个过程：
+
+1. 创建Netty Http／2服务端；
+2. 将需要调用的服务端接口实现类注册到内部的Registry中，RPC调用时，可以根据RPC请求中的服务定义信息查询到服务接口实现类。
+3. 创建gRPC Server，它是gRPC服务端的抽象，聚合了各种Listener，用于RPC消息的统一调度和处理。
+
+gRPC服务端创建关键流程分析：
+
+1. NettyServer 实例创建：gRPC服务端创建，首先需要初始化NettyServer，它是gRPC基于Netty 4.1 HTTP／2 协议栈之上封装的HTTP／2服务端。NettySerer实例由NettyServerBuilder的buildTransportServer方法构建，NettyServer构建完成之后，监听指定的Socket地址，即可实现基于HTTP／2协议的请求消息接入。
+2. 绑定IDL定义的服务接口实现类：gRPC与其它一些RPC框架的差异点是服务接口实现类的调用并不是通过动态代理和反射机制，而是通过proto工具生成代码。在服务端启动时，将服务接口实现类注册到gRPC内部的服务注册中心上。
 
 
 
@@ -112,6 +123,129 @@ static class GreeterImpl extends GreeterGrpc.GreeterImplBase {
 
 
 # gRPC线程模型分析
+
+### 1. RPC线程模型
+
+#### 1.1 BIO线程模型
+
+在JDK1.4之前，基于JAVA的所有Socket通信都采用了同步阻塞模式（BIO），这种一请求一应答的通信模型简化了上层的应用开发，但是在性能和可靠性方面却存在着巨大的瓶颈。
+
+因此，很长一段时间里，大型应用服务器都采用C或者C++语言开发，因为他们可以直接使用操作系统提供的异步IO或者AIO能力。
+
+当并发访问量增大、响应时间延迟增大之后，采用Java BIO开发的服务端软件只有通过硬件的不断扩容来满足高并发和低时延。
+
+传统采用BIO的java web服务器如下（典型的如Tomcat的BIO模式）：
+
+
+
+采用该线程模型的服务器调度特点如下：
+
+- 服务端监听线程Acceptor负责客户端的接入，每当有新的客户端接入，就会创建一个新的IO线程负责处理Socket。
+- 客户端请求消息的读取和应答的发送，都有IO线程负责。
+- 除了IO读写操作，默认情况下业务的逻辑处理，例如DB操作等，也都在IO线程处理；
+- IO操作采用同步阻塞操作，读写没有完成，IO线程会同步阻塞。
+
+BIO线程模型主要存在如下三个问题：
+
+1. 性能问题：一连接一线程模型导致服务端的并发接入数和系统吞吐量受到极大的限制；
+2. 可靠性问题：由于IO操作采用同步阻塞模式，当网络拥塞或者通信对端处理缓慢会导致IO线程被挂住，阻塞时间无法预测；
+3. 可维护性问题：IO线程数无法有效控制、资源无法有效共享（多线程并发问题），系统可维护性差；
+
+
+
+为了解决同步阻塞IO面临的一个链路需要一个线程处理的问题，通常会对它的线程模型进行优化，后端通过一个线程池来处理多个客户端的请求接入，形成客户端个数"M"与线程池最大线程数"N"的比例关系，其中M可以远远大于N，通过线程池可以拎获得调配线程资源，设置线程的最大数，防止海量并发接入导致线程耗尽。
+
+
+
+优化之后的BIO模型采用了线程池实现，因此避免了为每一个请求都创建一个独立线程造成的线程资源好景问题。但是由于它底层的通信依然采用同步阻塞模型，阻塞的时间取决于对方IO线程的处理速度和网络IO的传输速度。
+
+
+
+#### 1.2 异步非阻塞线程模型
+
+
+
+典型的NIO线程模型（Reactor模式）：
+
+
+
+
+
+#### 1.3 RPC性能三原则
+
+影响RPC框架性能的三个核心要素如下：
+
+1. IO模型：用什么样的通道将数据发送给对方，BIO、NIO或者AIO，IO模型在很大程度上决定了框架的性能；
+2. 协议：采用什么样的通信协议，Rest+JSON或者基于TCP的私有二进制协议，协议的选择不同，性能模型也不同，相比于公有协议，内部私有二进制协议的性能通常可以被设计的更好。
+3. 线程：数据报如何读取？读取之后的编解码在哪个线程进行，编解码后消息如何派发，通信线程模型的不同，对性能的影响也非常大。
+
+在以上三个要素中，线程模型对性能的影响非常大。随着硬件性能的提升，CPU的合数越来越多。
+
+通过多线程并发模型，可以充分利用多核CPU的处理能力，提升系统的处理效率和并发性能。但是如果线程创建或者管理不当，频繁发生线程上下文切换或者锁竞争，反而会影响性能的。
+
+线程模型的优劣直接影响了RPC框架的性能和并发能力，它也是大家选型时比较关心的技术细节之一；
+
+
+
+### 2. gRPC线程模型分析
+
+主要包括服务端线程模型和客户端线程模型，其中服务端线程模型和客户端线程模型，其中服务端线程模型主要包括：
+
+- 服务端监听和客户端接入线程（HTTP／2 Acceptor）
+- 网络IO读写线程
+- 服务接口调用线程
+
+客户端线程模型主要包括：
+
+- 客户端连接线程（HTTP／2 Connector）
+- 网络IO读写线程
+- 接口调用线程
+- 响应回调通知线程
+
+#### 2.1 服务端线程模型
+
+gRPC服务端线程模型整体上可以分为两大类：
+
+- 网络通信相关的线程模型，基于Netty4.1 的线程模型实现
+- 服务接口调用线程模型，基于JDK线程池实现
+
+##### 2.1.1 服务端线程模型概述
+
+
+
+HTTP／2服务端创建、HTTP／2请求消息的接入和响应都有Netty负责，gRPC消息的序列化和反序列化、以及应用服务接口的调用由gRPC的SerializingExecutor线程池负责。
+
+##### 2.1.2 IO通信线程模型
+
+gRPC的做法是服务端监听线程和IO线程分离的Reactor多线程模型。
+
+Netty线程模型的核心是NioEventLoop，它的职责如下：
+
+1. 作为服务端Acceptor线程，负责处理客户端的请求接入；
+2. 作为IO线程，监听网络读操作位，负责从SocketChannel中读取报文；
+3. 作为IO线程，负责向SocketChannel写入报文发送给对方，如果发生写半包，会自动注册监听写时间，用于后续继续发送半包数据，直到数据全部发送完成；
+4. 作为定时任务线程，可以执行定期任务，例如链路空闲检测和发送心跳消息等；
+5. 作为线程执行器可以执行普通的任务线程（Runnable）。
+
+
+
+
+
+NioEventLoop处理网络IO操作代码如下：
+
+
+
+#### 2.1.3 服务调度线程模型
+
+主要职责如下：
+
+- 请求消息的反序列化，主要包括：HTTP／2 Header的反序列化，以及将PB（Body）反序列化为请求对象；
+- 服务接口的调用，method。invoke（非反射机制）；
+- 将响应消息封装成WriteQueue.QueuedCommand，写入到Netty Channel中，同时，对响应Header和Body对象做序列化。
+
+服务端调度的核心是SerializingExecutor
+
+
 
 
 
