--- a/_posts/2018-12-01-osi-model.md
+++ b/_posts/2018-12-01-osi-model.md
@@ -2,7 +2,7 @@
 title: The layer of the OSI Model Illustrated
 subtitle: OSL Model review
 layout: post
-tag: [network,OSI]
+tags: [network,OSI]
 ---
 
 [参考连接](https://www.lifewire.com/layers-of-the-osi-model-illustrated-818017)
