--- a/_posts/2018-12-01-selinux.md
+++ b/_posts/2018-12-01-selinux.md
@@ -2,7 +2,7 @@
 title: SeLinux介绍
 subtitle: selinux简介
 layout: post
-tag: [linux,selinux]
+tags: [linux,selinux]
 ---
 
 #### 1. 简介([原文地址](https://www.cnblogs.com/gailuo/p/5041034.html))
