--- a/_posts/2018-12-09-jib-usage.md
+++ b/_posts/2018-12-09-jib-usage.md
@@ -2,7 +2,7 @@
 title: Jib Usage
 subtitle: jib learning and theory
 layout: post
-tag: [jib,docker,image]
+tags: [jib,docker,image]
 ---
 
  	简单介绍一下jib的使用方法及其实现原理。
