--- a/_posts/2018-12-10-dhcp.md
+++ b/_posts/2018-12-10-dhcp.md
@@ -2,7 +2,7 @@
 title: What is DHCP?
 subtitle: what is dhcp????
 layout: post
-tag: [network,linux,docker,cni]
+tags: [network,linux,docker,cni]
 ---
 
 **DHCP** (Dynamic Host Configuration Protocol) is a protocol used to provide quick, automatic, and central management for the distribution of [IP addresses](https://www.lifewire.com/what-is-an-ip-address-2625920) within a network.
