--- a/_posts/2019-01-01-plan.md
+++ b/_posts/2019-01-01-plan.md
@@ -2,7 +2,7 @@
 title: 2019年工作计划
 subtitle: 19年学习、工作计划
 layout: post
-tag: [2019 plan]
+tags: [2019 plan]
 ---
 
 依稀记得16年年底来到上海，开始了我的职业生涯。经过两年多的工作，学习了各种知识。但都不是什么精通，因此需要沉淀一下。
