--- a/_posts/2019-01-27-harbor.md
+++ b/_posts/2019-01-27-harbor.md
@@ -2,7 +2,7 @@
 title: Harbor源码分析
 subtitle: Harbor source code design
 layout: post
-tags: [go harbor docker kubernetes]
+tags: [go,harbor,docker,kubernetes]
 ---
 
 放假回家，撸一发harbor。主要是之前在使用中发现了若干的坑爹问题。特地自家研究一下它的实现原理，有针对性地进行反击，有地放矢。
