--- a/_posts/2019-11-20-network.md
+++ b/_posts/2019-11-20-network.md
@@ -1,13 +1,9 @@
 ---
-title: Linux 网络——iptables/netfilter
-subtitle: Linux 网络知识总结——iptables/netfilter等基础知识
+title: Linux网络:iptables/netfilter
+subtitle: Linux网络知识总结,iptables/netfilter等基础知识
 layout: post
 tags: [linux,networking,iptables,netfilter]
 ---
-
-
-
-
 
 ## iptables/netfilter
 
