new cgroups doc

--- a/_posts/2021-11-03-cgroupv1.md
+++ b/_posts/2021-11-03-cgroupv1.md
@@ -5,7 +5,7 @@ subtitle: cgroupV1 官方文档解读备忘
 tags: [cgroup,linux]
 ---
 
-## 背景
+# 背景
 
 云原生技术很火，但是其底层的容器资源隔离了解的人很少。国内的很多博客虽有涉及，但是由于不是一手资料，在理解上很不官方。因此，对官方的文档进行了学习。
 建议大家能看英文的就看英文文档。
@@ -42,8 +42,6 @@ pids.txt
 
 下面会对上面的文档进行逐步的分析
 
-# cgroups.txt
-
 Control Groups definition, implementation details, examples and API.
 
 ## CONTENTS
@@ -73,16 +71,15 @@ Control Groups definition, implementation details, examples and API.
 Definitions:
     A cgroup associates a set of tasks with a set of parameters for one or more subsystems.
 
-A subsystem is a module that makes use of the task grouping facilities provided by cgroups to treat groups of tasks in particular ways. A subsystem is typically a “resource controller” that schedules a resource or applies per-cgroup limits, but it may be anything that wants to act on a group of processes, e.g. a virtualization subsystem.
+A subsystem（子系统） is a module that makes use of the task grouping facilities provided by cgroups to treat groups of tasks in particular ways. A subsystem is typically a “resource controller” that schedules a resource or applies per-cgroup limits, but it may be anything that wants to act on a group of processes, e.g. a virtualization subsystem.
 
-A hierarchy is a set of cgroups arranged in a tree, such that every task in the system is in exactly one of the cgroups in the hierarchy, and a set of subsystems; each subsystem has system-specific state attached to each cgroup in the hierarchy. Each hierarchy has an instance of the cgroup virtual filesystem associated with it.
+A hierarchy（层级） is a set of cgroups arranged in a tree, such that every task in the system is in exactly one of the cgroups in the hierarchy, and a set of subsystems; each subsystem has system-specific state attached to each cgroup in the hierarchy. Each hierarchy has an instance of the cgroup virtual filesystem associated with it.
 
 At any one time there may be multiple active hierarchies of task cgroups. Each hierarchy is a partition of all tasks in the system.
 
 User-level code may create and destroy cgroups by name in an instance of the cgroup virtual file system, specify and query to which cgroup a task is assigned, and list the task PIDs assigned to a cgroup. Those creations and assignments only affect the hierarchy associated with that instance of the cgroup file system.
 
 On their own, the only use for cgroups is for simple job tracking. The intention is that other subsystems hook into the generic cgroup support to provide new attributes for cgroups, such as accounting/limiting the resources which processes in a cgroup can access. For example, cpusets (see CPUSETS) allow you to associate a set of CPUs and a set of memory nodes with the tasks in each cgroup.
-
 
 #### 1.2 为什么需要控制组？
 
