--- a/_posts/2021-11-03-5W2H.md
+++ b/_posts/2021-11-03-5W2H.md
@@ -11,7 +11,7 @@ tags: [工作效率,分析]
 
 5W2H是一种很接地气的分析法。它把我们日常工作、生活中常用且熟知的思维总结归纳，便于实际应用。
 
-一、基本概念
+## 一、基本概念
 
 5W2H分析法也叫七何分析法，可以简单理解为一种在工作、生活、学习等过程中会广泛应用到的思考、思维方式。可指导我们更加全面的考虑问题并高效解决问题，是一种简单、方便易于理解的思维方式。
 
@@ -31,7 +31,7 @@ WHERE——何处？在那里做？从哪里入手？
 WHO——谁？由谁来承担？谁来完成？谁负责？
 HOW MUCH——多少？做到什么程度？数量如何？质量水平如何？费用产出如何？
 
-二、主要优势
+## 二、主要优势
 
 1.可以准确界定、清晰表述问题，提高工作效率。
 
@@ -41,7 +41,7 @@ HOW MUCH——多少？做到什么程度？数量如何？质量水平如何？
 
 4.有助于思路的条理化，杜绝盲目性。有助于全面思考问题，从而避免在流程设计中遗漏项目。
 
-三、作用意义
+## 三、作用意义
 
 如果现行的做法或产品经过七个问题的审核已无懈可击，便可认为这一做法或产品可取。
 
@@ -80,4 +80,37 @@ legend right
   legend
 endlegend
 @endmindmap
+```
+
+# 大的
+
+~~~ [api]
+post:/justForTest/api/user/userLogin
+
+*string:user_name=15612345678#用户手机号
+*string:user_pwd#密码
+
+<<<
+success
+{
+    "ret": 0, # 返回状态码
+    "data": {
+        "user_id": 1 // 用户id
+    },
+}
+<<<
+error
+{
+    "success": 0, // 请求成功!
+    "user_name_wrong": 1, // 密码不正确!
+    "insert_wrong": 2, // 数据库写入用户信息失败!
+    "query_wrong": 3, // 获取用户信息失败!
+}
+~~~
+
+```sequence
+Andrew->China: Says Hello
+Note right of China: China thinks\nabout it
+China-->Andrew: How are you?
+Andrew->>China: I am good thanks!
 ```
