--- a/_posts/2021-11-03-5W2H.md
+++ b/_posts/2021-11-03-5W2H.md
@@ -53,64 +53,35 @@ HOW MUCH——多少？做到什么程度？数量如何？质量水平如何？
 
 ``` plantuml
 @startmindmap
-+ OS
-++ Ubuntu
-+++ Linux Mint
-+++ Kubuntu
-+++ Lubuntu
-+++ KDE Neon
-++ LMDE
-++ SolydXK
-++ SteamOS
-++ Raspbian
--- Windows 95
--- Windows 98
--- Windows NT
---- Windows 8
---- Windows 10
-
-header
-My super header
-endheader
-
-center footer My super footer
-
-legend right
-  Short
-  legend
-endlegend
++ 分析法
+++ 5W2H 七何分析法
++++ 常用战术方面分析法
++++ 5W
+++++ 为何（why）
+++++ 何事（what）
+++++ 何人（who）
+++++ 何时（when）
+++++ 何地（where）
+++ Why
++++ 思考原因：为什么？为什么要这样做？理由是什么？原因是什么
+++++ 过去
+++++ 现在
+++++ 未来
+++ What
++++ 是什么？目的是什么？做什么工作？
+++++ 目的：未来的终极目的
+++++ 概述：现在
+++++ 重点
+++++ 工作对象
+++++  x
+++ Where
++++ 何处？在那里做？从哪里入手？
+++++ 范围
+++++ 地点
+++++ 切入点
+-- How Much
+-- How
+-- Who
+-- When
 @endmindmap
-```
-
-# 大的
-
-~~~ [api]
-post:/justForTest/api/user/userLogin
-
-*string:user_name=15612345678#用户手机号
-*string:user_pwd#密码
-
-<<<
-success
-{
-    "ret": 0, # 返回状态码
-    "data": {
-        "user_id": 1 // 用户id
-    },
-}
-<<<
-error
-{
-    "success": 0, // 请求成功!
-    "user_name_wrong": 1, // 密码不正确!
-    "insert_wrong": 2, // 数据库写入用户信息失败!
-    "query_wrong": 3, // 获取用户信息失败!
-}
-~~~
-
-```sequence
-Andrew->China: Says Hello
-Note right of China: China thinks\nabout it
-China-->Andrew: How are you?
-Andrew->>China: I am good thanks!
 ```
